# mdg-hackathon-proj

./: .gitignore  README.md  compile_commands.txt  load_throttler.sh  make_cgroup.sh  network  network.bpf.c  network.bpf.h  network.cpp  network.hpp  network.skel.h  throttler.bpf.c  throttler.bpf.h  throttler.skel.h
backend/: build_command.txt  install.sh  ipc_server  uninstall.sh
backend/cli/: main.cpp
backend/cli/export/: DOCS.txt  HELP.txt  ipc_server_cpu  ipc_server_ram  network  (+2 more)
backend/cpu/: Icpu_optimizer.h  cpu_optimizer  cpu_optimizer.cpp  cpu_reader  cpu_reader.cpp
backend/main_ram/: CMakeLists.txt  mem_ev_processor.cpp  mem_events.bpf.c
backend/main_ram/ram_detail/: pp_ram_log  pp_ram_log.cpp
backend/main_ram/ram_usage/: rl_processor  rl_processor.cpp
backend/main_ram/server/: api.cpp  ipc_server.cpp  ipc_server.hpp
backend/network/: api.cpp  api.hpp  network  network.cpp  network.hpp  network.skel.h  socket.cpp  test  test.cpp  throttler.bpf.c  unload_throttler.sh
backend/services/: cpu_optimizer.service
backend/socket/: ipc_server.cpp
ebpf/: cpu_reader  cpu_reader.c  runEbpfCpu.bash
ebpf/cpu/: cputracker.bpf.c  cputracker.skel.h  cputracker.skel.json
frontend/: index.html  package-lock.json  vite.config.ts
frontend/dist-electron/: bootstrap.js  main.js  main.js.map  preload.js  preload.js.map
frontend/electron/: main.ts  network-socket-client.ts  preload.ts  ram-socket-client.ts  socket-client.ts
frontend/src/: App.tsx
main_ram/: install.sh  mem_ev_processor.cpp  pp_ram_log.cpp  rl_processor.cpp
main_ram/ram_detail/: pp_ram_log.cpp
main_ram/server/: ipc_server.cpp
(+26 files in other folders)
